@@ -4409,6 +4409,10 @@ $form-icon-btn: (
 			display: block;
 		}
 	}
+
+	.header {
+		margin: 0 0 10px 3px;
+	}
 }
 
 .ui-selectable-helper {
