@@ -1,6 +1,7 @@
 Changes for 4.0.6rc1
 
 New features:
+..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)
 
 Bug fixes:
 
